# 42sh

./: .gitignore  .mailmap  Makefile.am  README.md  configure.ac
.github/workflows/: ci.yml
src/: Makefile.am  main.c
src/ast/: Makefile.am  ast.c  ast.h  check_variables.c  interpreter.c  setup_variables.c  variables.h
src/builtin/: Makefile.am  builtin.h  cd.c  dot.c  echo.c  exit.c  export.c  unset.c
src/exec/: Makefile.am  and_or.c  check_builtin.c  command.c  exec.c  exec.h  function.c  if.c  loop.c  negation.c  pipeline.c  redirections.c  semicolon.c  subshell.c
src/input/: Makefile.am  input.c  input.h
src/lexer/: Makefile.am  get_token_type.c  get_token_type.h  handle_special_cases.c  handle_special_cases.h  lexer.c  lexer.h  stack.c  stack.h  token.c  token.h
src/main_loop/: Makefile.am  main_loop.c  main_loop.h
src/parser/: Makefile.am  list_parser.c  list_parser.h  parser.c  parser.h  redirect_parser.c  shell_parser.c  shell_parser.h
src/utils/: Makefile.am  hash_map.c  hash_map.h  itoa.c  itoa.h  vector.c  vector.h
src/variables/: Makefile.am  preprocessing.c  preprocessing.h  setup_variables.c  variables.h
tests/: Makefile.am  ftests.sh  help.sh  helpme  test.sh  test_ast.c  test_builtin.c  test_input.c  test_lexer.c  test_parser.c  test_stack.c
